--- a/IBM WATSON - JAN.ipynb
+++ b/IBM WATSON - JAN.ipynb
@@ -72,11 +72,11 @@
     "from ibm_cloud_sdk_core.authenticators import IAMAuthenticator\n",
     "\n",
     "#Authentication via IAM\n",
-    "authenticator = IAMAuthenticator('Qw5R4QD-eFuXSRTd9UPqdx_R-NpMsGdsd5HB-EuKCsnl')\n",
+    "authenticator = IAMAuthenticator('INSERT')\n",
     "service = NaturalLanguageUnderstandingV1(\n",
     "    version='2018-03-16',\n",
     "    authenticator=authenticator)\n",
-    "service.set_service_url('https://api.au-syd.natural-language-understanding.watson.cloud.ibm.com/instances/85ee60e9-d23e-4536-a1f8-049ac8ac6d03')"
+    "service.set_service_url('INSERT')"
    ]
   },
   {
