--- a/IBM WATSON - JAN.ipynb
+++ b/IBM WATSON - JAN.ipynb
@@ -262,7 +262,7 @@
    "source": [
     "def main(df, chunksize = 200):\n",
     "    final = pd.DataFrame(columns=[\"Tweet\", \"Language\", \"Sentiment\", \"Emotion\", \"Keyword\", \"Categories\"])\n",
-    "    for i in range(0, df.shape, chunksize):\n",
+    "    for i in range(0, df.shape[0], chunksize):\n",
     "        print(\"CHUNK\", i, \"TO\", i + chunksize)\n",
     "        helper = main_helper(df[i:i + chunksize])\n",
     "        final = pd.concat([final, helper], axis=0)\n",
